Model training for legs and pull done. Push needs work

--- a/notebooks/data_exploration/data_exploration.ipynb
+++ b/notebooks/data_exploration/data_exploration.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 184,
    "id": "849c6a3a",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 185,
    "id": "dfcd8f3a",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,7 @@
        "max       11.000000  17736.000000   2956.000000  "
       ]
      },
-     "execution_count": 99,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,8 +247,6 @@
     "# Resolve the data file from common relative locations\n",
     "path = Path(\"../../data/processed/baseline_all_processed.csv\")\n",
     "df = pd.read_csv(path)\n",
-    "\n",
-    "X, y = train_test_split(df, test_size=0.2, random_state=42)\n",
     "\n",
     "# View the basic info and statistics of the DataFrame\n",
     "df.info()\n",
@@ -277,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 186,
    "id": "22593402",
    "metadata": {},
    "outputs": [],
@@ -305,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 187,
    "id": "5b851841",
    "metadata": {},
    "outputs": [
@@ -361,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 188,
    "id": "e419ea7e",
    "metadata": {},
    "outputs": [
@@ -450,29 +448,33 @@
     "\n",
     "## Now for some Feature Engineering Brainstorming!\n",
     "\n",
-    "#### Time-Based Feature Engineering\n",
-    "- days_since_last_session: an integer indicating the number of days since the first workout\n",
-    "- days_since_first_workout: an integer indicating the number of days since the last workout session\n",
-    "- session_number: an integer indicating the session number for each exercise\n",
-    "- rolling_avg_load_last_n_sessions: an integer indicating the rolling average load over the last n sessions\n",
-    "- rolling_trend_load: an integer indicating the trend (slope) of load over the last n sessions\n",
+    "**Time-based features** help the model learn patterns based on when the workout occurred relative to other sessions:\n",
     "\n",
-    "#### RPE Feature Engineering\n",
-    "First, we need to handle missing RPE values.\n",
-    "Then we create a column indicating which columns are missing RPE values.\n",
-    "Then we impute with median RPE.\n",
+    "- **`days_since_last_session`** (captures recovery periods between sessions)\n",
+    "- **`days_since_first_workout`** (shows the user’s experience level)\n",
+    "- **`session_number`** (tracks progression within each exercise)\n",
+    "- **`rolling_avg_load_last_n_sessions`** (captures trends in workout intensity)\n",
+    "- **`rolling_trend_load (slope)`** (measures whether the user’s intensity is improving or declining)\n",
     "\n",
-    "We'll bin RPE and then encode it as ordinal categorical variable.\n",
-    "0 - 5 : Low\n",
-    "6 - 7 : Medium\n",
-    "8 - 10: High\n",
     "\n",
-    "#### REPS Feature Engineering\n",
-    "We can create bins for reps as well.\n",
-    "rep_range_buckets:\n",
-    "1-5: Strength\n",
-    "6-15: Hypertrophy\n",
-    "15+: Endurance\n",
+    "**RPE (Rate of Perceived Exertion)** will be handled in the following steps:\n",
+    "\n",
+    "1. **Imputation**: Fill missing RPE values with the **median** RPE.\n",
+    "2. **Binning**: RPE values will be categorized into three groups:\n",
+    "   - **Low**: 0 - 5\n",
+    "   - **Medium**: 6 - 7\n",
+    "   - **High**: 8 - 10\n",
+    "3. **Encoding**: Convert RPE categories into an ordinal feature to capture workout intensity.\n",
+    "\n",
+    "\n",
+    "**Reps (Number of Repetitions)** will be binned as follows:\n",
+    "\n",
+    "- **Strength**: 1 - 5 reps (lower rep ranges focus on strength training)\n",
+    "- **Hypertrophy**: 6 - 15 reps (moderate rep ranges for muscle growth)\n",
+    "- **Endurance**: 15+ reps (higher rep ranges for endurance training)\n",
+    "\n",
+    "Binning reps helps capture the type of training being done and its impact on the top-set intensity.\n",
+    "\n",
     "\n",
     "<br>\n",
     "\n",
@@ -481,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 189,
    "id": "f6ed5a4a",
    "metadata": {},
    "outputs": [
@@ -490,27 +492,20 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\n",
-      "Categorical Columns with low cardinality:\n",
-      "\n",
-      "\n",
-      "Unique Values for Categorical Columns with high cardinality:\n",
-      "exercise_name\n",
-      "\n",
-      "\n",
-      "Numerical Columns\n",
-      "effective_load\n",
-      "reps\n",
-      "set_order\n",
-      "set_volume\n",
-      "weight\n",
-      "session_number\n",
-      "days_since_first_workout\n",
-      "days_since_last_workout\n",
-      "rolling_avg_load_last_3_sessions\n",
-      "rolling_trend_load\n",
-      "rpe_missing\n",
-      "rpe_ordinal\n"
+      "Mutual Information Scores:\n",
+      "weight                              2.755146\n",
+      "rolling_avg_load_last_3_sessions    2.231657\n",
+      "set_volume                          2.103370\n",
+      "rolling_trend_load                  1.203735\n",
+      "days_since_first_workout            1.177062\n",
+      "rpe_missing                         0.686396\n",
+      "session_number                      0.496034\n",
+      "reps                                0.482326\n",
+      "set_order                           0.248411\n",
+      "is_top_set                          0.059863\n",
+      "rpe_ordinal                         0.013386\n",
+      "days_since_last_workout             0.000000\n",
+      "dtype: float64\n"
      ]
     }
    ],
@@ -554,14 +549,53 @@
     "\n",
     "df = feature_engineering_pipeline(df)\n",
     "\n",
-    "explore_columns(df)\n",
+    "X = df.drop(columns=['effective_load'])\n",
+    "y = df['effective_load']\n",
     "\n",
-    "# mi_scores = de_utils.get_mi_scores(X, y)\n",
+    "mi_scores = de_utils.get_mi_scores(X, y)\n",
     "\n",
     "\n",
     "\n",
-    "# print(\"\\nMutual Information Scores:\")\n",
-    "# print(mi_scores.sort_values(ascending=False))\n"
+    "print(\"\\nMutual Information Scores:\")\n",
+    "print(mi_scores.sort_values(ascending=False))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1bc98f84",
+   "metadata": {},
+   "source": [
+    "### **Mutual Information Scores**\n",
+    "\n",
+    "After calculating the MI scores between features and the target (`effective_load`), we see the MI scores for each feature.\n",
+    "\n",
+    "\n",
+    "### **Feature Selection Strategy**\n",
+    "\n",
+    "We'll drop features with an MI score below **0.15**, as they offer minimal value for predicting `effective_load`.\n",
+    "\n",
+    "#### **Features to Drop**:\n",
+    "- **days_since_last_workout** (MI = 0.000)\n",
+    "- **rpe_ordinal** (MI = 0.013)\n",
+    "- **is_top_set** (MI = 0.059)\n",
+    "\n",
+    "#### **Remaining Features**:\n",
+    "- **weight**\n",
+    "- **rolling_avg_load_last_3_sessions**\n",
+    "- **set_volume**\n",
+    "- **rolling_trend_load**\n",
+    "- **days_since_first_workout**\n",
+    "- **rpe_missing**\n",
+    "- **session_number**\n",
+    "- **reps**\n",
+    "- **set_order**\n",
+    "\n",
+    "\n",
+    "### However...\n",
+    "`rpe_missing` has way too high of an MI when it's not even that high of a predictor. That means rpe_missing is being inflated and the model will end up memorizing \"noise\". So, it's better to **drop** rpe_missing.\n",
+    "\n",
+    "\n",
+    "The remaining features will be kept for model training.\n"
    ]
   }
  ],
