--- a/notebooks/model_workflow_user2_squat.ipynb
+++ b/notebooks/model_workflow_user2_squat.ipynb
@@ -21,6 +21,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "822ab252",
+   "metadata": {},
+   "source": [
+    "Imports libraries and sets the repo root on sys.path."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "de4e0b6c",
@@ -56,6 +64,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7bfe2eb0",
+   "metadata": {},
+   "source": [
+    "Loads User2’s squat history and the next session to predict."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "54f2e390",
@@ -85,6 +101,14 @@
    "metadata": {},
    "source": [
     "## 2. Analyze Training Pattern & Periodization Cycles"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7bcc3c9",
+   "metadata": {},
+   "source": [
+    "Computes training stats and detects deload cycles (15% drop)."
    ]
   },
   {
@@ -142,6 +166,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3c64a57e",
+   "metadata": {},
+   "source": [
+    "Loads the trained global squat model and shows its pipeline."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0ef66a7e",
@@ -185,6 +217,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b1bb869f",
+   "metadata": {},
+   "source": [
+    "Generates a raw ML prediction for load_delta and next weight."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "97448d8b",
@@ -212,6 +252,14 @@
    "metadata": {},
    "source": [
     "## 5. Apply Per-User Calibration"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c49226f",
+   "metadata": {},
+   "source": [
+    "Applies User2 calibration (a, b) to adjust the prediction."
    ]
   },
   {
@@ -271,6 +319,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "79c4866d",
+   "metadata": {},
+   "source": [
+    "Runs the rule-based fallback and compares with ML outputs."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ff4df67a",
@@ -307,6 +363,14 @@
    "metadata": {},
    "source": [
     "## 7. Visualize Training Pattern & Periodization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "634fb5a3",
+   "metadata": {},
+   "source": [
+    "Visualizes progression, load deltas, reps×weight, and cycles."
    ]
   },
   {
@@ -375,6 +439,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "af12baba",
+   "metadata": {},
+   "source": [
+    "Reads recent predictions and calibration details from SQLite."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d03dd9f5",
@@ -437,6 +509,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a8ba0659",
+   "metadata": {},
+   "source": [
+    "Displays the full personalization JSON with interpretation notes."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "61da581a",
@@ -473,6 +553,14 @@
    "metadata": {},
    "source": [
     "## 10. Summary & Interpretation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15f88fcd",
+   "metadata": {},
+   "source": [
+    "Summarizes the workflow, results, and recommended next steps."
    ]
   },
   {
