--- a/notebooks/sample_ML_predict/sample_ML_predict.ipynb
+++ b/notebooks/sample_ML_predict/sample_ML_predict.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "id": "0542edc6",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
       "POPULATING USER1 WORKOUT HISTORY\n",
       "======================================================================\n",
       "\n",
-      "1. Loading baseline data from: C:\\Users\\rezas\\GitHub\\delta-sequential-recommender\\data\\baseline\\strong_4krows_baseline_data.csv\n",
+      "1. Loading baseline data from: data/baseline/strong_4krows_baseline_data.csv\n",
       "   ✓ Loaded 3989 rows\n",
       "   ✓ Filtered to 1295 top sets\n",
       "   ✓ Mapped to compounds, 94 rows with valid exercises\n",
@@ -94,15 +94,24 @@
     "# Setup: add repo to path, initialize databases, ensure user1 data\n",
     "import sys, sqlite3\n",
     "from pathlib import Path\n",
-    "repo = Path().resolve().parent\n",
-    "sys.path.insert(0, str(repo))\n",
+    "\n",
+    "# Resolve paths: this notebook lives under notebooks/sample_ML_predict/\n",
+    "repo = Path().resolve().parent  # notebooks/\n",
+    "# Ensure project root (repo.parent) is on sys.path so src/data imports work\n",
+    "if str(repo.parent) not in sys.path:\n",
+    "    sys.path.insert(0, str(repo.parent))\n",
+    "# Also include the notebooks folder for relative utilities\n",
+    "if str(repo) not in sys.path:\n",
+    "    sys.path.insert(0, str(repo))\n",
+    "# Include user1 test helpers (enable ML + populate history)\n",
+    "sys.path.insert(0, str(repo.parent / 'tests' / 'user1_tests'))\n",
     "\n",
     "# Initialize auth DB + ensure tables\n",
     "from data.auth.init_auth_db import init_auth_db\n",
     "init_auth_db()\n",
     "\n",
     "# Ensure session_audit exists (in addition to run_app initialization)\n",
-    "db_path = repo / 'data' / 'user_data.db'\n",
+    "db_path = repo.parent / 'data' / 'user_data.db'\n",
     "conn = sqlite3.connect(db_path)\n",
     "cur = conn.cursor()\n",
     "cur.execute(\"\"\"\n",
@@ -144,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "id": "675dd15a",
    "metadata": {},
    "outputs": [
@@ -152,15 +161,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'user_id': 11, 'user_data_path': 'C:\\\\Users\\\\rezas\\\\GitHub\\\\delta-sequential-recommender\\\\users\\\\user1'}\n"
+      "{'user_id': 11, 'user_folder': 'user1'}\n"
      ]
     }
    ],
    "source": [
     "# Sign in as user1\n",
     "from src import auth\n",
+    "from pathlib import Path\n",
     "user_id, user_data_path = auth.login('user1', 'demo123')\n",
-    "print({'user_id': user_id, 'user_data_path': user_data_path})"
+    "print({'user_id': user_id, 'user_folder': Path(user_data_path).name})"
    ]
   },
   {
@@ -175,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "id": "8a001558",
    "metadata": {},
    "outputs": [
@@ -209,6 +219,10 @@
    "source": [
     "import pandas as pd\n",
     "from pathlib import Path\n",
+    "\n",
+    "# Suppress polyfit condition warnings from calibration\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore', message='Polyfit may be poorly conditioned')\n",
     "\n",
     "# Reload modules to get latest code\n",
     "import importlib\n",
@@ -265,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "id": "19f2cfcf",
    "metadata": {},
    "outputs": [
@@ -312,7 +326,8 @@
     "print(\"FALLBACK DEMO: BENCH PRESS (Weak ML Model)\")\n",
     "print(\"=\" * 70)\n",
     "\n",
-    "auth_db = repo / 'data' / 'auth' / 'app_users.db'\n",
+    "# Use project root for auth DB path (repo is notebooks/; repo.parent is project root)\n",
+    "auth_db = repo.parent / 'data' / 'auth' / 'app_users.db'\n",
     "conn = sqlite3.connect(auth_db)\n",
     "cur = conn.cursor()\n",
     "\n",
@@ -383,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "id": "48de7438",
    "metadata": {},
    "outputs": [
@@ -395,7 +410,7 @@
       "POPULATING USER1 WORKOUT HISTORY\n",
       "======================================================================\n",
       "\n",
-      "1. Loading baseline data from: C:\\Users\\rezas\\GitHub\\delta-sequential-recommender\\data\\baseline\\strong_4krows_baseline_data.csv\n",
+      "1. Loading baseline data from: data/baseline/strong_4krows_baseline_data.csv\n",
       "   ✓ Loaded 3989 rows\n",
       "   ✓ Filtered to 1295 top sets\n",
       "   ✓ Mapped to compounds, 94 rows with valid exercises\n",
@@ -439,14 +454,23 @@
    ],
    "source": [
     "# Reset user1 history and clear session audit rows\n",
-    "from populate_user1_history import populate_user1_history\n",
-    "populate_user1_history()\n",
+    "import importlib, sys\n",
+    "\n",
+    "# Reload to ensure latest path-sanitizing changes are used\n",
+    "if 'populate_user1_history' in sys.modules:\n",
+    "    import populate_user1_history as p\n",
+    "    importlib.reload(p)\n",
+    "else:\n",
+    "    import populate_user1_history as p\n",
+    "\n",
+    "p.populate_user1_history()\n",
     "print('✓ user1 history reset to baseline demo slice.')\n",
     "\n",
-    "# Clear session_audit entries for user1\n",
+    "# Clear session_audit entries for user1 (use project root for DB path)\n",
     "import sqlite3\n",
     "from src.auth import get_user_id\n",
-    "db_path = repo / 'data' / 'user_data.db'\n",
+    "\n",
+    "db_path = repo.parent / 'data' / 'user_data.db'\n",
     "conn = sqlite3.connect(db_path)\n",
     "cur = conn.cursor()\n",
     "uid = get_user_id('user1')\n",
